# terraform-operator

./: .dockerignore  Dockerfile  Makefile  README.md  handlers.py  pyproject.toml
config/crd/: kopfexamples.tfo.retr0h.github.com_kopfexamples.yaml
config/samples/: README.md  cm.yaml  job.yaml  obj.yaml
terraform-operator/: pyproject.toml
terraform-operator/tests/: test_terraform_operator.py
tests/: test_terraform_operator.py
